More warnings fixed