@@ -72,8 +72,7 @@ public class Manager {
     }
 
     /**
-     * Loads all stuff needed and if this is the first time downloads the avr
-     * boards and needed tools
+     * Loads all stuff needed and if this is the first time downloads the avr boards and needed tools
      * 
      * @param monitor
      */
@@ -88,8 +87,8 @@ public class Manager {
 		InstallLibraries(monitor);
 
 		// TODO add sample programs here please
-		downloadAndInstall(EXAMPLES_URL, EXAMPLE_PACKAGE,
-			Paths.get(ConfigurationPreferences.getInstallationPathExamples().toString()), false, monitor);
+		downloadAndInstall(EXAMPLES_URL, EXAMPLE_PACKAGE, Paths.get(ConfigurationPreferences.getInstallationPathExamples().toString()), false,
+			monitor);
 
 		// now add the boards
 		String platformName = ARDUINO_AVR_BOARDS;
@@ -125,25 +124,21 @@ public class Manager {
     }
 
     /**
-     * Given a platform description in a json file download and install all
-     * needed stuff. All stuff is including all tools and core files and
-     * hardware specific libraries. That is (on windows) inclusive the make.exe
+     * Given a platform description in a json file download and install all needed stuff. All stuff is including all tools and core files and hardware
+     * specific libraries. That is (on windows) inclusive the make.exe
      * 
      * @param platform
      * @param monitor
      * @param object
      * @return
      */
-    static public IStatus downloadAndInstall(ArduinoPlatform platform, boolean forceDownload,
-	    IProgressMonitor monitor) {
+    static public IStatus downloadAndInstall(ArduinoPlatform platform, boolean forceDownload, IProgressMonitor monitor) {
 
-	IStatus status = downloadAndInstall(platform.getUrl(), platform.getArchiveFileName(), platform.getInstallPath(),
-		forceDownload, monitor);
+	IStatus status = downloadAndInstall(platform.getUrl(), platform.getArchiveFileName(), platform.getInstallPath(), forceDownload, monitor);
 	if (!status.isOK()) {
 	    return status;
 	}
-	MultiStatus mstatus = new MultiStatus(status.getPlugin(), status.getCode(), status.getMessage(),
-		status.getException());
+	MultiStatus mstatus = new MultiStatus(status.getPlugin(), status.getCode(), status.getMessage(), status.getException());
 
 	for (ToolDependency tool : platform.getToolsDependencies()) {
 	    monitor.setTaskName(InstallProgress.getRandomMessage());
@@ -152,8 +147,7 @@ public class Manager {
 	// On Windows install make from equations.org
 	if (Platform.getOS().equals(Platform.OS_WIN32)) {
 	    try {
-		Path makePath = Paths
-			.get(ConfigurationPreferences.getPathExtensionPath().append("make.exe").toString()); //$NON-NLS-1$
+		Path makePath = Paths.get(ConfigurationPreferences.getPathExtensionPath().append("make.exe").toString()); //$NON-NLS-1$
 		if (!makePath.toFile().exists()) {
 		    Files.createDirectories(makePath.getParent());
 		    URL makeUrl = new URL("ftp://ftp.equation.com/make/32/make.exe"); //$NON-NLS-1$
@@ -190,8 +184,7 @@ public class Manager {
 	try {
 	    URL packageUrl = new URL(url.trim());
 	    String localFileName = Paths.get(packageUrl.getPath()).getFileName().toString();
-	    Path packagePath = Paths
-		    .get(ConfigurationPreferences.getInstallationPath().append(localFileName).toString());
+	    Path packagePath = Paths.get(ConfigurationPreferences.getInstallationPath().append(localFileName).toString());
 	    File packageFile = packagePath.toFile();
 	    if (!packageFile.exists() || download) {
 		packagePath.getParent().toFile().mkdirs();
@@ -205,7 +198,7 @@ public class Manager {
 		}
 	    }
 	} catch (IOException e) {
-	    Common.log(new Status(IStatus.WARNING, Activator.PLUGIN_ID, "Failed to load package index", e)); //$NON-NLS-1$
+	    Common.log(new Status(IStatus.WARNING, Activator.getId(), "Failed to load package index", e)); //$NON-NLS-1$
 	}
     }
 
@@ -224,8 +217,7 @@ public class Manager {
 	try {
 	    URL librariesUrl = new URL(LIBRARIES_URL);
 	    String localFileName = Paths.get(librariesUrl.getPath()).getFileName().toString();
-	    Path librariesPath = Paths
-		    .get(ConfigurationPreferences.getInstallationPath().append(localFileName).toString());
+	    Path librariesPath = Paths.get(ConfigurationPreferences.getInstallationPath().append(localFileName).toString());
 	    File librariesFile = librariesPath.toFile();
 	    if (!librariesFile.exists() || download) {
 		librariesPath.getParent().toFile().mkdirs();
@@ -238,7 +230,7 @@ public class Manager {
 		}
 	    }
 	} catch (IOException e) {
-	    Common.log(new Status(IStatus.WARNING, Activator.PLUGIN_ID, "Failed to load library index", e)); //$NON-NLS-1$
+	    Common.log(new Status(IStatus.WARNING, Activator.getId(), "Failed to load library index", e)); //$NON-NLS-1$
 	}
 
     }
@@ -347,13 +339,10 @@ public class Manager {
     }
 
     /**
-     * downloads an archive file from the internet and saves it in the download
-     * folder under the name "pArchiveFileName" then extrats the file to
-     * pInstallPath if pForceDownload is true the file will be downloaded even
-     * if the download file already exists if pForceDownload is false the file
-     * will only be downloaded if the download file does not exists The
-     * extraction is done with processArchive so only files types supported by
-     * this method will be properly extracted
+     * downloads an archive file from the internet and saves it in the download folder under the name "pArchiveFileName" then extrats the file to
+     * pInstallPath if pForceDownload is true the file will be downloaded even if the download file already exists if pForceDownload is false the file
+     * will only be downloaded if the download file does not exists The extraction is done with processArchive so only files types supported by this
+     * method will be properly extracted
      * 
      * @param pURL
      *            the url of the file to download
@@ -364,8 +353,8 @@ public class Manager {
      * @param pMonitor
      * @return
      */
-    public static IStatus downloadAndInstall(String pURL, String pArchiveFileName, Path pInstallPath,
-	    boolean pForceDownload, IProgressMonitor pMonitor) {
+    public static IStatus downloadAndInstall(String pURL, String pArchiveFileName, Path pInstallPath, boolean pForceDownload,
+	    IProgressMonitor pMonitor) {
 	IPath dlDir = ConfigurationPreferences.getInstallationPathDownload();
 	IPath archivePath = dlDir.append(pArchiveFileName);
 	String archiveFullFileName = archivePath.toString();
@@ -382,13 +371,12 @@ public class Manager {
 	return processArchive(pArchiveFileName, pInstallPath, pForceDownload, archiveFullFileName, pMonitor);
     }
 
-    private static IStatus processArchive(String pArchiveFileName, Path pInstallPath, boolean pForceDownload,
-	    String pArchiveFullFileName, IProgressMonitor pMonitor) {
+    private static IStatus processArchive(String pArchiveFileName, Path pInstallPath, boolean pForceDownload, String pArchiveFullFileName,
+	    IProgressMonitor pMonitor) {
 	// Create an ArchiveInputStream with the correct archiving algorithm
 	String faileToExtractMessage = Messages.Manager_Failed_to_extract + pArchiveFullFileName;
 	if (pArchiveFileName.endsWith("tar.bz2")) { //$NON-NLS-1$
-	    try (ArchiveInputStream inStream = new TarArchiveInputStream(
-		    new BZip2CompressorInputStream(new FileInputStream(pArchiveFullFileName)))) {
+	    try (ArchiveInputStream inStream = new TarArchiveInputStream(new BZip2CompressorInputStream(new FileInputStream(pArchiveFullFileName)))) {
 		return extract(inStream, pInstallPath.toFile(), 1, pForceDownload, pMonitor);
 	    } catch (IOException | InterruptedException e) {
 		return new Status(IStatus.ERROR, Activator.getId(), faileToExtractMessage, e);
@@ -400,8 +388,7 @@ public class Manager {
 		return new Status(IStatus.ERROR, Activator.getId(), faileToExtractMessage, e);
 	    }
 	} else if (pArchiveFileName.endsWith("tar.gz")) { //$NON-NLS-1$
-	    try (ArchiveInputStream in = new TarArchiveInputStream(
-		    new GzipCompressorInputStream(new FileInputStream(pArchiveFullFileName)))) {
+	    try (ArchiveInputStream in = new TarArchiveInputStream(new GzipCompressorInputStream(new FileInputStream(pArchiveFullFileName)))) {
 		return extract(in, pInstallPath.toFile(), 1, pForceDownload, pMonitor);
 	    } catch (IOException | InterruptedException e) {
 		return new Status(IStatus.ERROR, Activator.getId(), faileToExtractMessage, e);
@@ -417,8 +404,8 @@ public class Manager {
 	}
     }
 
-    public static IStatus extract(ArchiveInputStream in, File destFolder, int stripPath, boolean overwrite,
-	    IProgressMonitor pMonitor) throws IOException, InterruptedException {
+    public static IStatus extract(ArchiveInputStream in, File destFolder, int stripPath, boolean overwrite, IProgressMonitor pMonitor)
+	    throws IOException, InterruptedException {
 
 	// Folders timestamps must be set at the end of archive extraction
 	// (because creating a file in a folder alters the folder's timestamp)
@@ -497,8 +484,7 @@ public class Manager {
 
 	    // Strip the common path prefix when requested
 	    if (!name.startsWith(pathPrefix)) {
-		throw new IOException(Messages.Manager_no_single_root_folder_while_file + name
-			+ Messages.Manager_is_outside + pathPrefix);
+		throw new IOException(Messages.Manager_no_single_root_folder_while_file + name + Messages.Manager_is_outside + pathPrefix);
 	    }
 	    name = name.substring(pathPrefix.length());
 	    if (name.isEmpty()) {
@@ -509,8 +495,7 @@ public class Manager {
 	    File outputLinkedFile = null;
 	    if (isLink && linkName != null) {
 		if (!linkName.startsWith(pathPrefix)) {
-		    throw new IOException(Messages.Manager_no_single_root_folder_while_file + linkName
-			    + Messages.Manager_is_outside + pathPrefix);
+		    throw new IOException(Messages.Manager_no_single_root_folder_while_file + linkName + Messages.Manager_is_outside + pathPrefix);
 		}
 		linkName = linkName.substring(pathPrefix.length());
 		outputLinkedFile = new File(destFolder, linkName);
@@ -519,8 +504,7 @@ public class Manager {
 		// Symbolic links are referenced with relative paths
 		outputLinkedFile = new File(linkName);
 		if (outputLinkedFile.isAbsolute()) {
-		    System.err.println(Messages.Manager_Warning_file + outputFile
-			    + Messages.Manager_links_to_absolute_path + outputLinkedFile);
+		    System.err.println(Messages.Manager_Warning_file + outputFile + Messages.Manager_links_to_absolute_path + outputLinkedFile);
 		    System.err.println();
 		}
 	    }
@@ -528,16 +512,14 @@ public class Manager {
 	    // Safety check
 	    if (isDirectory) {
 		if (outputFile.isFile() && !overwrite) {
-		    throw new IOException(
-			    Messages.Manager_Cant_create_folder + outputFile + Messages.Manager_File_exists);
+		    throw new IOException(Messages.Manager_Cant_create_folder + outputFile + Messages.Manager_File_exists);
 		}
 	    } else {
 		// - isLink
 		// - isSymLink
 		// - anything else
 		if (outputFile.exists() && !overwrite) {
-		    throw new IOException(
-			    Messages.Manager_Cant_extract_file + outputFile + Messages.Manager_File_already_exists);
+		    throw new IOException(Messages.Manager_Cant_extract_file + outputFile + Messages.Manager_File_already_exists);
 		}
 	    }
 
@@ -603,8 +585,7 @@ public class Manager {
     }
 
     private static void link(File something, File somewhere) throws IOException, InterruptedException {
-	Process process = Runtime.getRuntime()
-		.exec(new String[] { "ln", something.getAbsolutePath(), somewhere.getAbsolutePath() }, null, null); //$NON-NLS-1$
+	Process process = Runtime.getRuntime().exec(new String[] { "ln", something.getAbsolutePath(), somewhere.getAbsolutePath() }, null, null); //$NON-NLS-1$
 	process.waitFor();
     }
 
